# cache

./: Cargo.toml  README.md  README.tpl
cache-tests/: Cargo.toml
cache-tests/src/: lib.rs
docs/: index.html  search-index.js  source-files.js
docs/cache/: all.html  index.html  sidebar-items.js  trait.Cache.html
docs/src/cache/: lib.rs.html
src/: lib.rs
